--- a/lib/hello.html
+++ b/lib/hello.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="test" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link type="text/css" rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
 	<h1>Hello, World!</h1>
